[package]
name = "fsm-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
ra_ap_syntax = "0.0.336"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.4"
serde_json = "1.0"
anyhow = "1.0"
typed-fsm-diagram-core = { path = "../core" }
