[package]
name = "typed-fsm-diagram-core"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
mermaid-builder = { git = "ssh://git@github.com/mbUSC/mermaid-builder.git" }
